<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardBackgroundColor="#5e35b1"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/fullscreen_dialog_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_close_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/fullscreen_dialog_close"
                android:text="Page Title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/fullscreen_dialog_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="Применить"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interests"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:chipSpacing="10dp" />

            <include layout="@layout/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.appyvet.materialrangebar.RangeBar
                android:id="@+id/range_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrb_barWeight="2dp"
                app:mrb_connectingLineColor="@color/quantum_yellow"
                app:mrb_connectingLineWeight="4dp"
                app:mrb_pinColor="@color/quantum_googred"
                app:mrb_pinMaxFont="15sp"
                app:mrb_pinMinFont="12sp"
                app:mrb_pinRadius="14dp"
                app:mrb_rangeBar_rounded="true"
                app:mrb_rightThumbColor="@color/quantum_googred"
                app:mrb_thumbBoundaryColor="@color/quantum_googred"
                app:mrb_thumbColor="@color/quantum_googred"
                app:mrb_thumbSize="10dp"
                app:mrb_tickEnd="100"
                app:mrb_tickHeight="0dp"
                app:mrb_tickInterval="1"
                app:mrb_tickLabelSize="4sp"
                app:mrb_tickStart="17" />

            <include layout="@layout/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genger"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="48dp"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:minWidth="0dp"
                        android:minHeight="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/any" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="48dp"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:minWidth="0dp"
                        android:minHeight="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/man" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkbox_any"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/quantum_yellow"
                        android:checked="true"
                        android:minWidth="0dp"
                        android:minHeight="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/woman" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>