<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_profile_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/layout_profile_name_and_extra_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="256dp"
                    android:text="Mister Smith"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_profile_extra_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="256dp"
                    android:text="Rock N Roll"
                    android:textSize="18sp" />
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/layout_profile_name_and_extra_info"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_profile_info"
            android:layout_marginTop="8dp"
            android:text="@string/edit" />

        <TextView
            android:id="@+id/text_interests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_edit_profile"
            android:layout_marginTop="16dp"
            android:text="@string/interests"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_interests"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:chipSpacing="8dp" />

        <TextView
            android:id="@+id/text_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chip_group"
            android:layout_marginTop="16dp"
            android:text="@string/little_about_me"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_about_me"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_years_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/icon_profile_years_old"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/btn_background"
                    android:src="@drawable/ic_date_range_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_years_old"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21 год"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_lives_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/icon_profile_lives_in"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/btn_background"
                    android:src="@drawable/ic_location_city_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_lives_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Москва"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_studying_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/icon_profile_studying_in"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/btn_background"
                    android:src="@drawable/ic_school_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_studying_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="МГУ"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_works_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/icon_profile_works_in"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/btn_background"
                    android:src="@drawable/ic_work_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_works_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="На заводе"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_about_me"
            android:layout_marginTop="16dp"
            android:text="@string/rus_events"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="512dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
